[package]
name = "carbonmeter-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "build-event-store"

[[bin]]
name = "carbonmeter-api"
path = "src/bin/api.rs"

[dependencies]
apibara-sdk = { git = "https://github.com/apibara/dna", branch = "main" }
apibara-core = { git = "https://github.com/apibara/dna", branch = "main" }
anyhow = "1.0.71"
tokio = "1.28.0"
tracing = "0.1.37"
futures = "0.3.28"
env_logger = "0.10.0"
tokio-stream = "0.1.14"
chrono = { version = "0.4.24", features = ["serde"]}
thiserror = "1.0.40"
reqwest = { version = "0.11.17", features = ["tokio-rustls", "serde_json"]}
serde = "1.0.162"
crypto-bigint = { version = "0.5.2", features = ["serde"]}
serde_json = "1.0.96"
rocksdb = { version = "0.20.1", features = ["io-uring", "multi-threaded-cf"]}
log = "0.4.18"
actix-web = "4.3.1"
